--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Pablo Belay
 email: pbelay@gmail.com 
-description: > Cousas miñas e outras burradas
+description: Cousas miñas e outras burradas
 baseurl: # "/" # the subpath of your site, e.g. /blog
 url: "https://pbelay.github.io/belaygal/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: belay
