--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,8 @@ twitter_username: belay
 github_username:  pbelay
 
 # Build settings
-theme: minima
+# theme: minima
+theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
 
