--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ url: "https://pbelay.github.io/belaygal/" # the base hostname & protocol for you
 twitter_username: belay
 github_username:  pbelay
 # Build settings
-#theme: minima
-theme: minimal-mistakes-jekyll
+theme: minima
+#theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
 
