--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,10 @@ github_username:  pbelay
 # Build settings
 theme: minima
 #theme: minimal-mistakes-jekyll
+#theme: jekyll-theme-chirpy
 plugins:
   - jekyll-feed
-
+  - jekyll-gallery-generator
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
@@ -49,3 +50,27 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+
+gallery:
+  dir: photos               # Path to the gallery
+  symlink: false            # false: copy images into _site. true: create symbolic links (saves disk space)
+  title: "Photos"           # Title for gallery index page
+  title_prefix: "Photos: "  # Title prefix for gallery pages. Gallery title = title_prefix + gallery_name
+  sort_field: "date_time"   # How to sort galleries on the index page.
+                            # Possible values are: title, date_time, best_image
+  thumbnail_size:
+    x: 400                  # max width of thumbnails (in pixels)
+    y: 400                  # max height of thumbnails (in pixels)
+  # The following options are for individual galleries.
+  galleries:
+    viaxe01:
+      best_image: 01.JPG  # The image to show on the gallery index page. Defaults to the last image.
+    viaxe02:
+      hidden: true          # Don't show this gallery on the index page. People must guess the URL.
+      best_image: 02.JPG
+      name: "日本の旅"       # Defaults to directory name, replacing _ with spaces & capitalizing words.
+    
+    with_info:
+      info:
+        desc: "Gallery Description" # Info fields can be used in custom templates.
